--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,14 +9,8 @@ jobs:
   build:
 
     runs-on: node:alpine3.19
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
     - run: npm ci
-    - run: npm run build --if-present
+    - run: npm run build
     - run: npm test
